Workaround for not invoking DaCapo jars with -jar (#56)